config docs
